# discriminative-segmentation-and-tracking

./: README.md
ros-pkg/buildtools/catkin_simple/cmake/: catkin_simple-extras.cmake.em
ros-pkg/core/agent/: CMakeLists.txt  CMakeLists.txt.orig  package.xml
ros-pkg/core/agent/include/agent/: agent.h  lockable.h
ros-pkg/core/agent/src/lib/: agent.cpp
ros-pkg/core/dst/: CMakeLists.txt  package.xml
ros-pkg/core/graphcuts/: CMakeLists.txt  package.xml
ros-pkg/core/graphcuts/include/graphcuts/: structural_svm.h
ros-pkg/core/image_labeler/: CMakeLists.txt  package.xml
ros-pkg/core/optimization/: CMakeLists.txt  package.xml
ros-pkg/core/optimization/src/: demo_nesterov.cpp  optimization.cpp
ros-pkg/core/pipeline2/: CMakeLists.txt  package.xml
ros-pkg/core/pipeline3/: CMakeLists.txt  package.xml
ros-pkg/core/pipeline3/src/: test_pipeline.cpp
ros-pkg/utility/bag_of_tricks/: CMakeLists.txt  package.xml
ros-pkg/utility/bag_of_tricks/include/bag_of_tricks/: image_indexer.h  relative_path.h
ros-pkg/utility/bag_of_tricks/src/: relative_path.cpp  test_image_indexer.cpp
ros-pkg/utility/bag_of_tricks/src/program/throwaway/: print_relative_paths.cpp
ros-pkg/utility/eigen_extensions/: CMakeLists.txt  package.xml
ros-pkg/utility/eigen_extensions/src/throwaway/: scratch.cpp
ros-pkg/utility/eigen_flags/: CMakeLists.txt  package.xml
ros-pkg/utility/gzstream/: CMakeLists.txt  package.xml
ros-pkg/utility/name_mapping/: CMakeLists.txt  package.xml
ros-pkg/utility/name_mapping/include/name_mapping/: name_mapping.h
ros-pkg/utility/opencv_flags/: CMakeLists.txt  package.xml
ros-pkg/utility/pcl_flags/: CMakeLists.txt  package.xml
ros-pkg/utility/pcl_flags/cmake/: pcl_flags-extras.cmake.em
ros-pkg/utility/serializable/: CMakeLists.txt  package.xml
ros-pkg/utility/timer/: CMakeLists.txt  package.xml
ros-pkg/utility/timer/include/timer/: profile.h  timer.h
ros-pkg/utility/timer/src/lib/: profile.cpp  timer.cpp
