<?xml version="1.0"?>
<package format="2">
  <name>agent</name>
  <version>0.0.0</version>
  <description>The agent package</description>
  <maintainer email="teichman@todo.todo">teichman</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
