<?xml version="1.0"?>
<package format="2">
  <name>dst</name>
  <version>0.0.0</version>
  <description>The dst (discriminative segmentation and tracking) package</description>
  <maintainer email="dddutz@cs.stanford.edu">dddutz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>pcl_flags</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_extensions</depend>
  <depend>bag_of_tricks</depend>
  <depend>timer</depend>
  <depend>pipeline2</depend>
  <depend>optimization</depend>
  <depend>maxflow</depend>
  <depend>opencv_flags</depend>
  <depend>image_labeler</depend>
  <depend>graphcuts</depend>

  <export>
  </export>
</package>