<?xml version="1.0"?>
<package format="2">
  <name>eigen_extensions</name>
  <version>0.0.0</version>
  <description>The eigen_extensions package</description>
  <maintainer email="teichman@todo.todo">teichman</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>eigen_flags</depend>
  <depend>bag_of_tricks</depend>
  <depend>gzstream</depend>

  <export>
  </export>
</package>
