<?xml version="1.0"?>
<package format="2">
  <name>eigen_flags</name>
  <version>0.0.0</version>
  <description>The eigen_flags package</description>
  <maintainer email="teichman@todo.todo">teichman</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>

  <export>
  </export>
</package>
