<?xml version="1.0"?>
<package format="2">
  <name>opencv_flags</name>
  <version>0.0.0</version>
  <description>The opencv_flags package</description>
  <maintainer email="teichman@todo.todo">teichman</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>

  <export>
  </export>
</package>
