<?xml version="1.0"?>
<package format="2">
  <name>serializable</name>
  <version>0.0.0</version>
  <description>The serializable package</description>
  <maintainer email="teichman@todo.todo">teichman</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>agent</depend>
  <depend>yaml_cpp</depend>

  <export>
  </export>
</package>
